--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,6 +19,7 @@ requirements:
     - python >=3.7
     - setuptools >=61.0
     - pip
+    - wheel
   run:
     - python >=3.7
     - sphinx >=3.2.0
